--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 jobs:
   build:
-    woking_directory: test_tests
+    woking_directory: ~/test_tests
           steps:
           - checkout
           - run: make test
