--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/test_tests
+    working_directory: test_tests
     docker:
     - image: circleci/golang:1
     steps:
