--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: test_tests
     docker:
-    - image: circleci/golang:1
+    - image: gcc:8.2
     steps:
     - checkout
     - run: make test
